--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test Form</title>
+<title>Login Form</title>
 </head>
 <body>
 
@@ -13,16 +13,8 @@
 
 <input type="password" name="pass" value="abcdefg"><br>
 
-<input type="radio" name="NPC" value="a1">NPC<br>
-
-<input type="radio" name="Boss" value="a2">Boss<br>
 
 <button type="submit">Enter</button>
-
-<select name = "colour">
-	<option value = "Red">Red</option>
-    <option value = "Blue">Blue</option>
-    <option value = "Green">Green</option>
 
 </form>
 
