changing form destination

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<form action="https://www.google.com" method="GET" target="_blank">
+<form action="./StephenHurley.github.io/GameLoop.html" method="GET" target="_blank">
 
 <input type="text" name="q" value="pwa">
 
