--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-<title>Login Form</title>
-</head>
-<body>
+<body onload="onPageLoad()">
 
-<form action="./StephenHurley.github.io/GameLoop.html" method="GET" target="_blank">
-
-<input type="text" name="q" value="pwa">
-
-<input type="text" name="user" value="Stephen">
-
-<input type="password" name="pass" value="abcdefg"><br>
-
-
-<button type="submit">Enter</button>
-
+<h1>Login Page</h1>
+<form action="https://stephenhurley.github.io/GameLoop.html" method="get">
+    <input type="text" value="test" name="gamertag">
+    <button type="submit">Submit</button>
 </form>
+
+<script>
+function onPageLoad() {
+var href = window.location.href;
+    alert(href);
+   
+    var protocol = window.location.protocol;
+    alert(protocol);
+   
+    var host = window.location.host;
+    alert(host);
+   
+   
+    var pathname = window.location.pathname;
+    alert(pathname);
+   
+    var search = window.location.search;
+    alert(search);
+   
+}
+</script>
 
 </body>
 </html>
