small changes, gameloop does not yet use inputed value from index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-
 <!DOCTYPE html>
 <html>
 <body onload="onPageLoad()">
 
 <h1>Login Page</h1>
-<form action="https://stephenhurley.github.io/GameLoop.html" method="get">
-    <input type="text" value="test" name="gamertag">
+<p1>Enter your GamerTag</p1>
+
+<form name="gamerTagForm" action="https://stephenhurley.github.io/GameLoop.html" method="get">
+    <input type="text" value="" name="GamerTag">
     <button type="submit">Submit</button>
 </form>
 
@@ -26,8 +27,7 @@ var href = window.location.href;
    
     var search = window.location.search;
     alert(search);
-   
-}
+	
 </script>
 
 </body>
