--- a/GameLoop.html
+++ b/GameLoop.html
@@ -14,8 +14,8 @@
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 
 </head>
-<h1> Welcome, <span id="myGamerTag"></span></h1>
-<body onload="onPageLoad()">
+<h1><span id="WelcomeGamerTag"></span></h1>
+<body onload="splitFunction()">
     <canvas tabindex="1" id="game" width="800" height="800" style="border: black 1px solid;">
         Oops! looks like your browser does not support canvas tag
     </canvas>
