--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 <h1>Login Page</h1>
 <p1>Enter your GamerTag</p1>
 
-
 <form name="gamerTagForm" action="https://stephenhurley.github.io/GameLoop.html" method="get">
     <input type="text" value="" name="GamerTag">
-    <button type="submit" onClick()"splitFunction">Submit</button>
+    <button type="submit">Submit</button>
 </form>
 
 <script>
