accidentally started with index not game, converted project accordingly

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <button type="submit">Submit</button>
 </form>
 
- <script src="./js/register.js"></script>
-
+<script>
+function onPageLoad() {
+var href = window.location.href;
+   
+    var protocol = window.location.protocol;
+    
+    var host = window.location.host;
+    
+    var pathname = window.location.pathname;
+   
+    var search = window.location.search;
+}	
+</script>
 </body>
 </html>
