--- a/GameLoop.html
+++ b/GameLoop.html
@@ -40,7 +40,8 @@
     </table>
 </body>
 
-    <!--JavaScript File-->
+    <!--JavaScript Files-->
     <script src="./js/script.js"></script>
+	<script src="./js/register.js"></script>
 
 </html>
