seeing if this fixes issue with register

--- a/GameLoop.html
+++ b/GameLoop.html
@@ -14,8 +14,10 @@
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 
 </head>
+
 <h1><span id="WelcomeGamerTag"></span></h1>
-<body onload="splitFunction()">
+
+<body onload="onPageLoad()">
     <canvas tabindex="1" id="game" width="800" height="800" style="border: black 1px solid;">
         Oops! looks like your browser does not support canvas tag
     </canvas>
@@ -42,6 +44,6 @@
 
     <!--JavaScript Files-->
     <script src="./js/script.js"></script>
-	<script src="./js/register.js"></script>
+	<script src="./register.js"></script>
 
 </html>
