--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>Login Page</h1>
 <p1>Enter your GamerTag</p1>
 
-<form name="gamerTagForm" action="GameLoop.html" method="get">
+<form name="gamerTagForm" action="https://stephenhurley.github.io/GameLoop.html" method="get">
     <input type="text" value="" name="GamerTag">
     <button type="submit">Submit</button>
 </form>
