--- a/GameLoop.html
+++ b/GameLoop.html
@@ -8,16 +8,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Simple Bird FLying Game">
     <meta name="author" content="Stephen Hurley">
+	
+	<link rel="apple-touch-icon" href="img/icons/152_152.png">
+  <meta name="theme-color" content="white" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Stephen Hurley BirdSim PWA (Progressive Web Application)">
+  
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-status-bar-style" content="black">
+  <meta name="mobile-web-app-title" content="Stephen Hurley BirdSim PWA (Progressive Web Application)">
+
+  <meta name="msapplication-TileImage" content="img/icons/144_144.png">
+  <meta name="msapplication-TileColor" content="#FFFFFF">
 
     <!--StyleSheet-->
     <link rel="stylesheet" href="./css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 
+	<link rel="manifest" href="/manifest.json">
 </head>
 
 <h1><span id="WelcomeGamerTag"></span></h1>
 
-<body onload="onPageLoad()">
+<body>
     <canvas tabindex="1" id="game" width="800" height="800" style="border: black 1px solid;">
         Oops! looks like your browser does not support canvas tag
     </canvas>
