added icon on tab

--- a/GameLoop.html
+++ b/GameLoop.html
@@ -26,7 +26,11 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 
+	<!--ManifestFile-->
 	<link rel="manifest" href="/manifest.json">
+	
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	
 </head>
 
 <h1><span id="WelcomeGamerTag"></span></h1>
