working on index page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+	
+</head>
 <title>Login</title>
 <body onload="onPageLoad()">
 
@@ -11,21 +15,7 @@
     <button type="submit">Submit</button>
 </form>
 
-<script>
-function onPageLoad() {
-var href = window.location.href;
-   
-    var protocol = window.location.protocol;
-    
-    var host = window.location.host;
-    
-    var pathname = window.location.pathname;
-   
-    var search = window.location.search;
+	<script src="./register.js"></script>
 	
-	console.log("index page load called");
-}	
-</script>
-
 </body>
 </html>
