going nuclear, moving UI game into original github.io repo

--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html>
+<head>
+
 <title>Login</title>
-<body onload="onPageLoad()">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Game Prototype">
+    <meta name="author" content="Stephen Hurley">
+	
+   <link rel="apple-touch-icon" href="assests/icons/152_152.png">
+   <meta name="theme-color" content="white" />
+   <meta name="apple-mobile-web-app-capable" content="yes">
+   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+   <meta name="apple-mobile-web-app-title" content="Stephen Hurley Game">
+  
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-status-bar-style" content="black">
+  <meta name="mobile-web-app-title" content="Stephen Hurley Game">
+  
+  <meta name="msapplication-TileImage" content="assests/icons/144_144.png">
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  
+  	<!--StyleSheet-->
+    <link rel="stylesheet" href="./style/styling.css">
+	
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+	<!--ManifestFile-->
+	<link rel="manifest" href="/manifest.json">
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	
+</head>
+
+<body>
 
 <h1>Login Page</h1>
 <p1>Enter your GamerTag</p1>
 
-<form name="gamerTagForm" action="https://stephenhurley.github.io/GameLoop.html" method="get">
-    <input type="text" value="" name="GamerTag">
+<form name="playerNameForm" action="https://stephenhurley.github.io/UIGame/Game.html" method="get">
+    <input type="text" value="" name="playerName">
     <button type="submit">Submit</button>
 </form>
-
-	<script src="./register.js"></script>
+	
+	<script src="register.js"></script>
 	
 </body>
 </html>
