--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h1>Login Page</h1>
 <p1>Enter your GamerTag</p1>
 
-<form name="playerNameForm" action="https://stephenhurley.github.io/UIGame/Game.html" method="get">
+<form name="playerNameForm" action="https://stephenhurley.github.io/Game.html" method="get">
     <input type="text" value="" name="playerName">
     <button type="submit">Submit</button>
 </form>
