--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<html lang="en">
 <title>Login</title>
 
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Game Prototype">
     <meta name="author" content="Stephen Hurley">
@@ -36,9 +37,14 @@
 <h1>Login Page</h1>
 <p1>Enter your GamerTag</p1>
 
+
 <form name="playerNameForm" action="https://stephenhurley.github.io/Game.html" method="get">
+
+<label>
+	GamerTag:
     <input type="text" value="" name="playerName">
     <button type="submit">Submit</button>
+</label>
 </form>
 	
 	<script src="register.js"></script>
