--- a/Game.html
+++ b/Game.html
@@ -32,7 +32,7 @@
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
-<body onload="splitFunction()">
+<body>
 
 <canvas id="gameCanvas">
 		Canvas not working
