changed buttons to arrows

--- a/Game.html
+++ b/Game.html
@@ -42,17 +42,17 @@
         <tbody>
             <tr>
 				<td>&nbsp;</td>
-                <td><button onclick="upClicked()" id="upButton" class="button round">UP</button></td>
+                <td><button onclick="upClicked()" id="upButton" class="button round">🡅</button></td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
-				<td><button onclick="leftClicked()" id="leftButton" class="button round">LEFT</button></td>
+				<td><button onclick="leftClicked()" id="leftButton" class="button round">🡄</button></td>
 				<td>&nbsp;</td>
-				<td><button onclick="rightClicked()" id="rightButton" class="button round">RIGHT</button></td>
+				<td><button onclick="rightClicked()" id="rightButton" class="button round">🡆</button></td>
 			</tr>
 			<tr>
 				<td>&nbsp;</td>
-				<td><button onclick="downClicked()" id="downButton" class="button round">DOWN</button></td>
+				<td><button onclick="downClicked()" id="downButton" class="button round">🡇</button></td>
 				<td>&nbsp;</td>
             </tr>
         </tbody>
