preventing form autocomplete, game state change when all enemies dead

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <label>
 	GamerTag:
-    <input type="text" value="" name="playerName">
+    <input type="text" autocomplete="off" value="" name="playerName">
     <button type="submit">Submit</button>
 </label>
 </form>
