fixed split function so that it gets player name correctly

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <label>
 
-<form name="playerNameForm" autoComplete="off" action="https://stephenhurley.github.io/Game.html" method="get">
+<form name="playerNameForm" autoComplete="off" action="Game.html" method="get">
 <input autocomplete="false" name="hidden" type="text" style="display:none;">
 
 	GamerTag:
